--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".ProfileFragment">
     <ImageView
-        android:scaleY="1"
-        android:scaleX="1"
+        android:scaleType="fitXY"
         android:id="@+id/image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
-        android:background="@color/purple_200"/>
+        android:background="@color/black"
+        />
 
 
 </FrameLayout>
