--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -18,6 +18,6 @@
     <item
         android:id="@+id/profileFragment"
         android:icon="@drawable/ic_person"
-        android:title="Profile"/>
+        android:title="@string/profile"/>
 
 </menu>
