--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
+        android:src="@drawable/ic_add"
         app:layout_constraintEnd_toEndOf="parent"
         />
 
