--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -2,4 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:id="@+id/clean"
     android:title="clean"/>
+
+
+    <item android:id="@+id/sort"
+        android:title="sort"/>
 </menu>
