--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".NewsFragment">
@@ -14,9 +15,8 @@
 
     <Button
         android:id="@+id/btn_save"
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="save" />
+        android:layout_height="wrap_content"
+        android:text="Save" />
 
 </LinearLayout>
