--- a/app/src/main/res/layout/pager_board.xml
+++ b/app/src/main/res/layout/pager_board.xml
@@ -1,24 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@color/black"/>
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/city" />
 
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Title"
-        android:layout_marginTop="96dp"
-        android:layout_marginBottom="32dp"
+        android:layout_below="@id/animation_view"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp"
         android:textSize="24sp"
+        android:layout_centerHorizontal="true"
         />
 
     <TextView
@@ -27,11 +35,14 @@
         android:layout_height="wrap_content"
         android:text="Description"
         android:textSize="24sp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/textTitle"
         />
     <Button
         android:id="@+id/btn_start"
         android:layout_width="match_parent"
         android:layout_margin="32dp"
         android:text="Start"
+        android:layout_below="@id/description"
         android:layout_height="wrap_content"/>
-</LinearLayout>
+</RelativeLayout>
